--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/cli": "^8.3.19",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
@@ -20,12 +21,14 @@
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/http": "^7.2.15",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@types/lodash": "^4.14.149",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.4",
     "rxjs": "~6.4.0",
